added json exception listener

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -19,5 +19,10 @@ services:
     App\:
         resource: '../src/'
 
+    # Register the JsonExceptionListener as a service
+    App\EventListener\JsonExceptionListener:
+        tags:
+            - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
+
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
