--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,9 @@
         "nelmio/cors-bundle": "^2.6",
         "phpdocumentor/reflection-docblock": "^6.0",
         "phpstan/phpdoc-parser": "^2.3",
+        "predis/predis": "^3.3",
         "symfony/asset": "7.4.*",
+        "symfony/cache": "7.4.*",
         "symfony/console": "7.4.*",
         "symfony/dotenv": "7.4.*",
         "symfony/expression-language": "7.4.*",
